objects/APL_Lost_Dead_Project_Show_Hide__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Control whether to display or hide the three sections for APL lost/dead project page</description>
    <fields>
        <fullName>Show_Business_Lost__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Business Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Business_Won__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Business Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Forecast_Total__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Forecast Total</label>
        <type>Checkbox</type>
    </fields>
    <label>APL Lost Dead Project Show/Hide</label>
</CustomObject>